--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <title>Portfolio</title>
 </head>
 
@@ -14,12 +14,12 @@
 
         <nav>
             <a href="index.html">
-                <img src="image-removebg-preview.png" width="110" alt="">
+                <img src="../IMG/image-removebg-preview.png" width="110" alt="">
             </a>
-            <a href="ABOUTME\aboutme.html">
+            <a href="../HTML/aboutme.html">
                 <p>"About me"</p>
             </a>
-            <a href="#">
+            <a href="../HTML/skills.html">
                 <p>"Skills"</p>
             </a>
             <a href="#">
@@ -36,7 +36,7 @@
             <p>Hola, me llamo Facundo Ríos y soy un potencial desarrollador de software. ¿Querés saber más sobre mí?
                 Clickeá en "About". Si te interesa, comunicate conmigo por mis redes sociales que estan en "Media
                 communications"</p> <br><br>
-            <img src="Logo.jpg" width="200px" alt="">
+            <img src="../IMG/Logo.jpg" width="200px" alt="">
         </div>
 
     </main>
