--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,46 +1,49 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="../CSS/index.css">
+
     <title>Portfolio</title>
 </head>
 
 <body>
     <header>
-
         <nav>
-            <a href="index.html">
-                <img src="../IMG/image-removebg-preview.png" width="110" alt="">
-            </a>
-            <a href="../HTML/aboutme.html">
-                <p>"About me"</p>
-            </a>
-            <a href="../HTML/skills.html">
-                <p>"Skills"</p>
-            </a>
-            <a href="#">
-                <p>"Media communications"</p>
-            </a>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-item" href="index.html">
+                        <img src="../IMG/image-removebg-preview.png" width="100px" alt="">
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutme.html">About Me</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="skills.html">Skills</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact me</a>
+                </li>
+            </ul>
         </nav>
-
     </header>
+<main>
+    <br>
+        <h1>Presetantion</h1>
+    <p>Hola, me llamo Facundo Ríos y soy un potencial desarrollador de software. ¿Querés saber más sobre mí?
+        Clickeá en "About". Si te interesa, comunicate conmigo por mis redes sociales que estan en "Media
+        communications"</p>
 
-    <main>
+</main>
 
-        <div class="presentation">
-            <h1>Presetantion</h1>
-            <p>Hola, me llamo Facundo Ríos y soy un potencial desarrollador de software. ¿Querés saber más sobre mí?
-                Clickeá en "About". Si te interesa, comunicate conmigo por mis redes sociales que estan en "Media
-                communications"</p> <br><br>
-            <img src="../IMG/Logo.jpg" width="200px" alt="">
-        </div>
-
-    </main>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
