Se cambiaron muchos  diseños

--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -44,7 +44,7 @@
             Recien estoy entrando al mundo de la progrmación, por lo que aun me falta mucho por aprender. Mi intención
             siempre es poder aprender aunque sea un poco todos los dias. Me gustaria destacar mi compromiso por los
             trabajos y mi constante disposición al aprendizaje y al ayudar a las personas. </p><br>
-        <img src="../IMG/mifoto.jpg" width="200px" alt="">
+        <img src="../IMG/mifoto.jpg" width="200px" alt="mifoto">
 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
