--- a/HTML/index.html
+++ b/HTML/index.html
@@ -35,12 +35,14 @@
 <main>
     <br>
         <h1>Presetantion</h1>
+        <br>
     <p>Hola, me llamo Facundo Ríos y soy un potencial desarrollador de software. ¿Querés saber más sobre mí?
-        Clickeá en "About". Si te interesa, comunicate conmigo por mis redes sociales que estan en "Media
-        communications"</p>
-
-</main>
-
+        Clickeá en "About". Si te interesa, comunicate conmigo por mis redes sociales que estan en "Contact me"</p>
+<img src="../IMG/Logo.jpg" width="200px" alt="">
+    </main>
+<footer>
+<p>Copyright</p>
+</footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
