Se agregaron estilos

--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -15,29 +15,25 @@
     <header>
         <nav>
             <ul class="nav">
-
                 <li class="nav-item">
                     <a class="nav-item" href="index.html">
-                    <img src="../IMG/image-removebg-preview.png" width="100px" alt=""></a>
+                        <img src="../IMG/image-removebg-preview.png" id="vector" width="90px" alt="">
+                    </a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">About Me</a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link" href="skills.html">Skills</a>
                 </li>
-
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact me</a>
                 </li>
-                
             </ul>
         </nav>
     </header>
     <main>
-    <br>
+        <br>
         <h1>¿Quien soy?</h1><br>
         <p>Mi nombre completo es Ríos Jorge Facundo, soy de la ciudad capital de Formosa, Argentina. Actualmente
             tengo 18 años y estoy estudiando en el "Polo Científico Tecnológico y de Innovación".
