--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,35 +14,35 @@
 <body>
     <header>
         <nav>
-            <ul class="nav">
-                <li class="nav-item">
-                    <a class="nav-item" href="index.html">
-                        <img src="../IMG/image-removebg-preview.png" width="100px" alt="">
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="aboutme.html">About Me</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="skills.html">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact me</a>
-                </li>
-            </ul>
+                <ul class="nav">
+                    <li class="nav-item">
+                        <a class="nav-item" href="index.html">
+                            <img src="../IMG/image-removebg-preview.png" id="vector" width="90px" alt="">
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="aboutme.html">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="skills.html">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact me</a>
+                    </li>
+                </ul>
         </nav>
     </header>
-<main>
-    <br>
+    <main>
+        <br>
         <h1>Presetantion</h1>
         <br>
-    <p>Hola, me llamo Facundo Ríos y soy un potencial desarrollador de software. ¿Querés saber más sobre mí?
-        Clickeá en "About". Si te interesa, comunicate conmigo por mis redes sociales que estan en "Contact me"</p>
-<img src="../IMG/Logo.jpg" width="200px" alt="">
+        <p>Hola, me llamo Facundo Ríos y soy un potencial desarrollador de software. ¿Querés saber más sobre mí?
+            Clickeá en "About". Si te interesa, comunicate conmigo por mis redes sociales que estan en "Contact me"</p>
+        <img src="../IMG/Logo.jpg" width="200px" alt="">
     </main>
-<footer>
-<p>Copyright</p>
-</footer>
+    <footer>
+        <p>Copyright</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
