--- a/HTML/skills.html
+++ b/HTML/skills.html
@@ -16,9 +16,9 @@
         <nav>
             <ul class="nav">
                 <li class="nav-item">
-                 <a class="nav-item" href="index.html">
-                    <img src="../IMG/image-removebg-preview.png" width="100px" alt="">
-                 </a>
+                    <a class="nav-item" href="index.html">
+                        <img src="../IMG/image-removebg-preview.png" id="vector" width="90px" alt="">
+                    </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">About Me</a>
@@ -32,18 +32,43 @@
             </ul>
         </nav>
     </header>
-
     <main>
         <h1>Skills</h1>
+        <br>
+        <div class="container-text-center">
+            <h2>Learning..</h2>
+            <div class="row">
+                <div class="col">
+                    <img src="../IMG/HTML.jpg" width="150px" alt="">
+                </div>
+                <div class="col">
+                    <img src="../IMG/CSS.png" width="150px" alt="">
+                </div>
+                <div class="col">
+                    <img src="../IMG/js.png" width="150px" alt="">
+                </div>
+            </div>
+            <br><br>
+            <h2>Future Missions...</h2>
+            <div class="row">
+                <div class="col">
+                    <img src="../IMG/PHP.png" width="150px" alt="">
+                </div>
+                <div class="col">
+                   <img src="../IMG/Phyton.png" width="150px" alt="">
+                </div> 
+            </div>
+        </div>
+        <h1></h1>
 
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
         <footer>
             <p>Copyright</p>
-            </footer>
+        </footer>
 </body>
 
 </html>
