--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -32,16 +32,18 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <br>
-        <h1>¿Quien soy?</h1><br>
+        <h1>¿Quien soy?</h1>
+        <br>
         <p>Mi nombre completo es Ríos Jorge Facundo, soy de la ciudad capital de Formosa, Argentina. Actualmente
             tengo 18 años y estoy estudiando en el "Polo Científico Tecnológico y de Innovación".
             Recien estoy entrando al mundo de la progrmación, por lo que aun me falta mucho por aprender. Mi intención
             siempre es poder aprender aunque sea un poco todos los dias. Me gustaria destacar mi compromiso por los
-            trabajos y mi constante disposición al aprendizaje y al ayudar a las personas. </p><br>
+            trabajos y mi constante disposición al aprendizaje y al ayudar a las personas. </p>
+        <br>
         <img src="../IMG/mifoto.jpg" width="200px" alt="mifoto">
-
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
