--- a/HTML/skills.html
+++ b/HTML/skills.html
@@ -32,6 +32,7 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <h1>Skills</h1>
         <br>
@@ -39,36 +40,81 @@
             <h2>Learning..</h2>
             <div class="row">
                 <div class="col">
-                    <img src="../IMG/HTML.jpg" width="150px" alt="">
+                    <a href="https://es.wikipedia.org/wiki/HTML">
+                        <img src="../IMG/HTML.jpg" width="110px" alt="">
+                    </a>
                 </div>
                 <div class="col">
-                    <img src="../IMG/CSS.png" width="150px" alt="">
+                    <a href="https://es.wikipedia.org/wiki/CSS">
+                        <img src="../IMG/CSS.png" width="110px" alt="">
+                    </a>
                 </div>
                 <div class="col">
-                    <img src="../IMG/js.png" width="150px" alt="">
+                    <a href="https://es.wikipedia.org/wiki/JavaScript">
+                        <img src="../IMG/js.png" width="110px" alt="">
+                    </a>
                 </div>
             </div>
             <br><br>
-            <h2>Future Missions...</h2>
+            <h2>Future Missions..</h2>
             <div class="row">
                 <div class="col">
-                    <img src="../IMG/PHP.png" width="150px" alt="">
+                    <a href="https://es.wikipedia.org/wiki/PHP">
+                        <img src="../IMG/PHP.png" width="110px" alt="">
+                    </a>
                 </div>
-                <div class="col">
-                   <img src="../IMG/Phyton.png" width="150px" alt="">
-                </div> 
+                <div class="col"><a href="https://es.wikipedia.org/wiki/Python">
+                        <img src="../IMG/Phyton.png" width="110px" alt="">
+                    </a>
+                </div>
             </div>
         </div>
-        <h1></h1>
+        <br>
+        <h1>Other Skills</h1>
+        <div class="container-text-center">
+            <div class="row">
+                <div class="col">
+                    <a href="https://www.capcut.com/">
+                    <img src="../IMG/capcut.png" width="110px" style="border-radius: 70px;" alt="">
+                </a>
+                </div>
+                <div class="col">
+                    <a href="https://clipchamp.com/es/">
+                    <img src="../IMG/clipchamp.jpg" width="110px" style="border-radius: 70px;" alt="">
+                </a>
+                </div>
+            </div>
+            <br><br>
+            <div class="row">
+                <div class="col">
+                    <a href="https://www.adobe.com/ar/products/photoshop.html">
+                    <img src="../IMG/photoshop.png" width="110px" style="border-radius: 70px;" alt="">
+                </a>
+                </div>
+                <div class="col"><a href="https://www.adobe.com/ar/products/photoshop-lightroom.html">
+                    <img src="../IMG/lightroom.png" width="110px" style="border-radius: 70px;" alt="">
+                </a>
+                </div>
+                <div class="col">
+                    <a href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed&hl=es_AR&gl=US&pli=1">
+                    <img src="../IMG/snapseed.png" width="110px" style="border-radius: 70px;" alt="">
+                </a>
+                </div>
+                <div class="col"><a href="https://www.vsco.co/">
+                    <img src="../IMG/vsco.png" width="100px" style="border-radius: 70px;" alt="">
+                </a>
+                </div>
+            </div>
+        </div>
 
-
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
-        <footer>
-            <p>Copyright</p>
-        </footer>
+    </main>
+    <br><br>
+    <footer>
+        <p>Copyright</p>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
