--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -17,7 +17,7 @@
             <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-item" href="index.html">
-                        <img src="../IMG/image-removebg-preview.png" id="vector" width="90px" alt="">
+                        <img src="../IMG/image-removebg-preview.png" width="90px" alt="">
                     </a>
                 </li>
                 <li class="nav-item">
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="skills.html">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact me</a>
+                    <a class="nav-link" href="contactme.html">Contact me</a>
                 </li>
             </ul>
         </nav>
@@ -45,6 +45,13 @@
         <br>
         <img src="../IMG/mifoto.jpg" width="200px" alt="mifoto">
     </main>
+    <br><br>
+    <footer>
+        <h1>
+            Copyright 2023
+        </h1>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
