--- a/HTML/contactme.html
+++ b/HTML/contactme.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../CSS/index.css">
+    <link rel="stylesheet" href="../CSS/contactme.css">
 
     <title>Portfolio</title>
 </head>
@@ -35,12 +35,23 @@
 
     <main>
         <br>
-        <h1>Presetantion</h1>
-        <br>
-        <p>Hola, me llamo Facundo Ríos y soy un potencial desarrollador de software. ¿Querés saber más sobre mí?
-            Clickeá en "About Me". Si te interesa, comunicate conmigo por mis redes sociales que estan en "Contact me"</p>
-            <br>
-        <img src="../IMG/Logo.jpg" width="200px" alt="">
+        <h1>No dudes en hablarme!</h1>
+
+        
+        <div class="container-text-center">
+            <div class="row">
+              <div class="col">
+                <a href="https://instagram.com/facundorios._?igshid=ZGUzMzM3NWJiOQ=="><img src="../IMG/IG.png"  width="100px" alt="">
+                </a>
+              </div>
+              <div class="col">
+                <a href= ><img src="../IMG/DISCORD ICON.png" width="90px" alt=""></a>
+              </div>
+              <div class="col">
+                <a href=""><img src="../IMG/github.png" width="100px" alt=""></a>
+              </div>
+            </div>
+          </div>
     </main>
     <br><br>
     <footer>
