--- a/HTML/contactme.html
+++ b/HTML/contactme.html
@@ -8,7 +8,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/contactme.css">
 
-    <title>Portfolio</title>
+    <title>Contactame</title>
 </head>
 
 <body>
@@ -36,8 +36,7 @@
     <main>
         <br>
         <h1>No dudes en hablarme!</h1>
-
-        
+        <br>
         <div class="container-text-center">
             <div class="row">
               <div class="col">
@@ -45,10 +44,10 @@
                 </a>
               </div>
               <div class="col">
-                <a href= ><img src="../IMG/DISCORD ICON.png" width="90px" alt=""></a>
+                <a href= ""><img src="../IMG/DISCORD ICON.png" width="90px" alt=""></a>
               </div>
               <div class="col">
-                <a href=""><img src="../IMG/github.png" width="100px" alt=""></a>
+                <a href="https://github.com/Facundorios05"><img src="../IMG/github.png" width="100px" alt=""></a>
               </div>
             </div>
           </div>
@@ -62,7 +61,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    </div>
 </body>
 
 </html>
