--- a/HTML/skills.html
+++ b/HTML/skills.html
@@ -8,7 +8,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/skills.css">
 
-    <title>Portfolio</title>
+    <title>Skiils</title>
 </head>
 
 <body>
@@ -36,6 +36,8 @@
     <main>
         <h1>Skills</h1>
         <br>
+        <p>Si bien aun estoy empezando en el mundo de la programación, poseo cierto conocimientos acerca de herramientas
+            digitales.</p>
         <div class="container-text-center">
             <h2>Learning..</h2>
             <div class="row">
@@ -75,40 +77,40 @@
             <div class="row">
                 <div class="col">
                     <a href="https://www.capcut.com/">
-                    <img src="../IMG/capcut.png" width="110px" style="border-radius: 70px;" alt="">
-                </a>
+                        <img src="../IMG/capcut.png" width="110px" style="border-radius: 70px;" alt="">
+                    </a>
                 </div>
                 <div class="col">
                     <a href="https://clipchamp.com/es/">
-                    <img src="../IMG/clipchamp.jpg" width="110px" style="border-radius: 70px;" alt="">
-                </a>
+                        <img src="../IMG/clipchamp.jpg" width="110px" style="border-radius: 70px;" alt="">
+                    </a>
                 </div>
             </div>
             <br><br>
             <div class="row">
                 <div class="col">
                     <a href="https://www.adobe.com/ar/products/photoshop.html">
-                    <img src="../IMG/photoshop.png" width="110px" style="border-radius: 70px;" alt="">
-                </a>
+                        <img src="../IMG/photoshop.png" width="110px" style="border-radius: 70px;" alt="">
+                    </a>
                 </div>
                 <div class="col"><a href="https://www.adobe.com/ar/products/photoshop-lightroom.html">
-                    <img src="../IMG/lightroom.png" width="110px" style="border-radius: 70px;" alt="">
-                </a>
+                        <img src="../IMG/lightroom.png" width="110px" style="border-radius: 70px;" alt="">
+                    </a>
                 </div>
                 <div class="col">
-                    <a href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed&hl=es_AR&gl=US&pli=1">
-                    <img src="../IMG/snapseed.png" width="110px" style="border-radius: 70px;" alt="">
-                </a>
+                    <a
+                        href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed&hl=es_AR&gl=US&pli=1">
+                        <img src="../IMG/snapseed.png" width="110px" style="border-radius: 70px;" alt="">
+                    </a>
                 </div>
                 <div class="col"><a href="https://www.vsco.co/">
-                    <img src="../IMG/vsco.png" width="100px" style="border-radius: 70px;" alt="">
-                </a>
+                        <img src="../IMG/vsco.png" width="100px" style="border-radius: 70px;" alt="">
+                    </a>
                 </div>
             </div>
         </div>
-
     </main>
-<br><br>
+    <br><br>
     <footer>
         <h1>
             Copyright 2023
