Se cambió el texto

--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -35,13 +35,13 @@
 
     <main>
         <br>
-        <h1>¿Quien soy?</h1>
+        <h1>Who I am?</h1>
         <br>
-        <p>Mi nombre completo es Ríos Jorge Facundo, soy de la ciudad capital de Formosa, Argentina. Actualmente
-            tengo 18 años y estoy estudiando en el "Polo Científico Tecnológico y de Innovación".
-            Recien estoy entrando al mundo de la progrmación, por lo que aun me falta mucho por aprender. Mi intención
-            siempre es poder aprender aunque sea un poco todos los dias. Me gustaria destacar mi compromiso por los
-            trabajos y mi constante disposición al aprendizaje y al ayudar a las personas. </p>
+        <p>My full name is Ríos Jorge Facundo, I am from the capital city of Formosa, Argentina. At the moment
+            I am 18 years old and I am studying at the "Scientific Technological and Innovation Pole".
+            I'm just entering the world of programming, so I still have a lot to learn. My intention
+            It is always being able to learn even a little every day. I would like to highlight my commitment to the
+            jobs and my constant willingness to learn and help people. </p>
         <br>
         <img src="../IMG/mifoto.jpg" width="200px" alt="mifoto">
     </main>
