--- a/HTML/contactme.html
+++ b/HTML/contactme.html
@@ -35,7 +35,7 @@
 
     <main>
         <br>
-        <h1>No dudes en hablarme!</h1>
+        <h1>Don't dude to talk to me!</h1>
         <br>
         <div class="container-text-center">
             <div class="row">
