--- a/HTML/index.html
+++ b/HTML/index.html
@@ -35,10 +35,10 @@
 
     <main>
         <br>
-        <h1>Presetantion</h1>
+        <h1>Welcome!</h1>
         <br>
-        <p>Hola, me llamo Facundo Ríos y soy un potencial desarrollador de software. ¿Querés saber más sobre mí?
-            Clickeá en "About Me". Si te interesa, comunicate conmigo por mis redes sociales que estan en "Contact me"</p>
+        <p>Hello, my name is Facundo Ríos and I am a potential software developer. Do you want to know more about me?
+            Click on "About Me". If you are interested, contact me through my social networks that are in "Contact me"</p>
             <br>
         <img src="../IMG/Logo.jpg" width="200px" alt="">
     </main>
