--- a/HTML/skills.html
+++ b/HTML/skills.html
@@ -36,8 +36,7 @@
     <main>
         <h1>Skills</h1>
         <br>
-        <p>Si bien aun estoy empezando en el mundo de la programación, poseo cierto conocimientos acerca de herramientas
-            digitales.</p>
+        <p>Although I am still starting in the world of programming, I have some knowledge about digital tools.</p>
         <div class="container-text-center">
             <h2>Learning..</h2>
             <div class="row">
