Se dió formato a los archivos

--- a/HTML/contactme.html
+++ b/HTML/contactme.html
@@ -39,18 +39,19 @@
         <br>
         <div class="container-text-center">
             <div class="row">
-              <div class="col">
-                <a href="https://instagram.com/facundorios._?igshid=ZGUzMzM3NWJiOQ=="><img src="../IMG/IG.png"  width="100px" alt="">
-                </a>
-              </div>
-              <div class="col">
-                <a href= ""><img src="../IMG/DISCORD ICON.png" width="90px" alt=""></a>
-              </div>
-              <div class="col">
-                <a href="https://github.com/Facundorios05"><img src="../IMG/github.png" width="100px" alt=""></a>
-              </div>
+                <div class="col">
+                    <a href="https://instagram.com/facundorios._?igshid=ZGUzMzM3NWJiOQ=="><img src="../IMG/IG.png"
+                            width="100px" alt="">
+                    </a>
+                </div>
+                <div class="col">
+                    <a href=""><img src="../IMG/DISCORD ICON.png" width="90px" alt=""></a>
+                </div>
+                <div class="col">
+                    <a href="https://github.com/Facundorios05"><img src="../IMG/github.png" width="100px" alt=""></a>
+                </div>
             </div>
-          </div>
+        </div>
     </main>
     <br><br>
     <footer>
