--- a/HTML/index.html
+++ b/HTML/index.html
@@ -38,8 +38,9 @@
         <h1>Welcome!</h1>
         <br>
         <p>Hello, my name is Facundo Ríos and I am a potential software developer. Do you want to know more about me?
-            Click on "About Me". If you are interested, contact me through my social networks that are in "Contact me"</p>
-            <br>
+            Click on "About Me". If you are interested, contact me through my social networks that are in "Contact me"
+        </p>
+        <br>
         <img src="../IMG/Logo.jpg" width="200px" alt="">
     </main>
     <br><br>
