--- a/HTML/skills.html
+++ b/HTML/skills.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/skills.css">
-
+    <link rel="icon" href="../IMG/Logo.jpg" type="image/png">
     <title>Skiils</title>
 </head>
 
@@ -34,6 +34,7 @@
     </header>
 
     <main>
+        <br>
         <h1>Skills</h1>
         <br>
         <p>Although I am still starting in the world of programming, I have some knowledge about digital tools.</p>
