Se dió formato a los archivos

--- a/HTML/aboutme.html
+++ b/HTML/aboutme.html
@@ -8,7 +8,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/aboutme.css">
     <link rel="icon" href="../IMG/Logo.jpg" type="image/png">
-    <title>Sobre mí</title>
+    <title>aboutme</title>
 </head>
 
 <body>
@@ -34,29 +34,20 @@
     </header>
 
     <main>
-        <br>
-<<<<<<< Updated upstream
-        <h1>Who I am?</h1>
-        <br>
-        <p>My full name is Ríos Jorge Facundo, I am from the capital city of Formosa, Argentina. At the moment
-            I am 18 years old and I am studying at the "Scientific Technological and Innovation Pole".
-            I'm just entering the world of programming, so I still have a lot to learn. My intention
-            It is always being able to learn even a little every day. I would like to highlight my commitment to the
-            jobs and my constant willingness to learn and help people. </p>
-=======
-        <h1>¿Who I am?</h1>
-        <br>
-        <p>My full name is Rios Jorge Facundo, I'm from the capital city of Formosa, Argentina. I'm currently 18 years old and studying at the 'Polo Científico Tecnológico y de Innovación'. I'm just starting to enter the world of programming, so I still have a lot to learn. My intention is always to be able to learn even a little bit every day. I would like to highlight my commitment to work and my constant willingness to learn and help people.</p>
->>>>>>> Stashed changes
-        <br>
-        <img src="../IMG/mifoto.jpg" width="200px" alt="mifoto">
+        <div class="content">
+            <br>
+            <h1>Who I am?</h1>
+            <br>
+            <p>My full name is Ríos Jorge Facundo, I am from the capital city of Formosa, Argentina. At the moment
+                I am 18 years old and I am studying at the "Scientific Technological and Innovation Pole".
+                I'm just entering the world of programming, so I still have a lot to learn. My intention
+                It is always being able to learn even a little every day. I would like to highlight my commitment to the
+                jobs and my constant willingness to learn and help people. </p>
+            <br>
+            <img src="../IMG/mifoto.jpg" width="200px" alt="mifoto">
+        </div>
     </main>
     <br><br>
-    <footer>
-        <h1>
-            Copyright 2023
-        </h1>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
