--- a/HTML/index.html
+++ b/HTML/index.html
@@ -36,27 +36,20 @@
     </header>
 
     <main>
-        <br>
-<<<<<<< Updated upstream
-        <h1>Welcome!</h1>
-        <br>
-        <p>Hello, my name is Facundo Ríos and I am a potential software developer. Do you want to know more about me?
-            Click on "About Me". If you are interested, contact me through my social networks that are in "Contact me"
-=======
-        <h1>Presentation</h1>
-        <br>
-        <p>Hi, my name is Facundo Rios and I'm a potential software developer. Do you want to know more about me? Click on "About Me". If you're interested, contact me through my social media links in "Contact me".
->>>>>>> Stashed changes
-        </p>
-        <br>
-        <img src="../IMG/Logo.jpg" width="200px" alt="">
+        <div class="content">
+            <br>
+            <h1>Welcome!</h1>
+            <br>
+            <p>Hello, my name is Facundo Ríos and I am a potential software developer. Do you want to know more about
+                me?
+                Click on "About Me". If you are interested, contact me through my social networks that are in "Contact
+                me"
+            </p>
+            <br>
+            <img src="../IMG/Logo.jpg" width="200px" alt="">
+        </div>
     </main>
     <br><br>
-    <footer>
-        <h1>
-            Copyright 2023
-        </h1>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
