--- a/HTML/contactme.html
+++ b/HTML/contactme.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,8 +9,6 @@
     <link rel="icon" href="../IMG/Logo.jpg" type="image/png">
     <title>Contactme</title>
 </head>
-
-<body>
     <header>
         <nav>
             <ul class="nav">
@@ -32,14 +29,10 @@
             </ul>
         </nav>
     </header>
-
     <main>
+        <div class="content">
         <br>
-<<<<<<< Updated upstream
-        <h1>Don't dude to talk to me!</h1>
-=======
         <h1>Don't hesitate to talk to me!</h1>
->>>>>>> Stashed changes
         <br>
         <div class="container-text-center">
             <div class="row">
@@ -56,13 +49,9 @@
                 </div>
             </div>
         </div>
-    </main>
+    </div>
+</main>
     <br><br>
-    <footer>
-        <h1>
-            Copyright 2023
-        </h1>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
