--- a/HTML/skills.html
+++ b/HTML/skills.html
@@ -34,88 +34,85 @@
     </header>
 
     <main>
-        <br>
-        <h1>Skills</h1>
-        <br>
-        <p>Although I am still starting in the world of programming, I have some knowledge about digital tools.</p>
-        <div class="container-text-center">
-            <h2>Learning..</h2>
-            <div class="row">
-                <div class="col">
-                    <a href="https://es.wikipedia.org/wiki/HTML">
-                        <img src="../IMG/HTML.jpg" width="110px" alt="">
-                    </a>
+        <div class="content">
+            <br>
+            <h1>Skills</h1>
+            <br>
+            <p>Although I am still starting in the world of programming, I have some knowledge about digital tools.</p>
+            <div class="container-text-center">
+                <h2>Learning..</h2>
+                <div class="row">
+                    <div class="col">
+                        <a href="https://es.wikipedia.org/wiki/HTML">
+                            <img src="../IMG/HTML.jpg" width="110px" alt="">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="https://es.wikipedia.org/wiki/CSS">
+                            <img src="../IMG/CSS.png" width="110px" alt="">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="https://es.wikipedia.org/wiki/JavaScript">
+                            <img src="../IMG/js.png" width="110px" alt="">
+                        </a>
+                    </div>
                 </div>
-                <div class="col">
-                    <a href="https://es.wikipedia.org/wiki/CSS">
-                        <img src="../IMG/CSS.png" width="110px" alt="">
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="https://es.wikipedia.org/wiki/JavaScript">
-                        <img src="../IMG/js.png" width="110px" alt="">
-                    </a>
-                </div>
-            </div>
-            <br><br>
-            <h2>Future Missions..</h2>
-            <div class="row">
-                <div class="col">
-                    <a href="https://es.wikipedia.org/wiki/PHP">
-                        <img src="../IMG/PHP.png" width="110px" alt="">
-                    </a>
-                </div>
-                <div class="col"><a href="https://es.wikipedia.org/wiki/Python">
-                        <img src="../IMG/Phyton.png" width="110px" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-        <br>
-        <h1>Other Skills</h1>
-        <div class="container-text-center">
-            <div class="row">
-                <div class="col">
-                    <a href="https://www.capcut.com/">
-                        <img src="../IMG/capcut.png" width="110px" style="border-radius: 70px;" alt="">
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="https://clipchamp.com/es/">
-                        <img src="../IMG/clipchamp.jpg" width="110px" style="border-radius: 70px;" alt="">
-                    </a>
+                <br><br>
+                <h2>Future Missions..</h2>
+                <div class="row">
+                    <div class="col">
+                        <a href="https://es.wikipedia.org/wiki/PHP">
+                            <img src="../IMG/PHP.png" width="110px" alt="">
+                        </a>
+                    </div>
+                    <div class="col"><a href="https://es.wikipedia.org/wiki/Python">
+                            <img src="../IMG/Phyton.png" width="110px" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
-            <br><br>
-            <div class="row">
-                <div class="col">
-                    <a href="https://www.adobe.com/ar/products/photoshop.html">
-                        <img src="../IMG/photoshop.png" width="110px" style="border-radius: 70px;" alt="">
-                    </a>
+            <br>
+            <h1>Other Skills</h1>
+            <div class="container-text-center">
+                <div class="row">
+                    <div class="col">
+                        <a href="https://www.capcut.com/">
+                            <img src="../IMG/capcut.png" width="110px" style="border-radius: 70px;" alt="">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="https://clipchamp.com/es/">
+                            <img src="../IMG/clipchamp.jpg" width="110px" style="border-radius: 70px;" alt="">
+                        </a>
+                    </div>
                 </div>
-                <div class="col"><a href="https://www.adobe.com/ar/products/photoshop-lightroom.html">
-                        <img src="../IMG/lightroom.png" width="110px" style="border-radius: 70px;" alt="">
-                    </a>
-                </div>
-                <div class="col">
-                    <a
-                        href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed&hl=es_AR&gl=US&pli=1">
-                        <img src="../IMG/snapseed.png" width="110px" style="border-radius: 70px;" alt="">
-                    </a>
-                </div>
-                <div class="col"><a href="https://www.vsco.co/">
-                        <img src="../IMG/vsco.png" width="100px" style="border-radius: 70px;" alt="">
-                    </a>
+                <br><br>
+                <div class="row">
+                    <div class="col">
+                        <a href="https://www.adobe.com/ar/products/photoshop.html">
+                            <img src="../IMG/photoshop.png" width="110px" style="border-radius: 70px;" alt="">
+                        </a>
+                    </div>
+                    <div class="col"><a href="https://www.adobe.com/ar/products/photoshop-lightroom.html">
+                            <img src="../IMG/lightroom.png" width="110px" style="border-radius: 70px;" alt="">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a
+                            href="https://play.google.com/store/apps/details?id=com.niksoftware.snapseed&hl=es_AR&gl=US&pli=1">
+                            <img src="../IMG/snapseed.png" width="110px" style="border-radius: 70px;" alt="">
+                        </a>
+                    </div>
+                    <div class="col"><a href="https://www.vsco.co/">
+                            <img src="../IMG/vsco.png" width="100px" style="border-radius: 70px;" alt="">
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
     <br><br>
-    <footer>
-        <h1>
-            Copyright 2023
-        </h1>
-    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
