--- a/HTML/contactme.html
+++ b/HTML/contactme.html
@@ -48,7 +48,7 @@
           <div class="row">
             <div class="col">
               <a
-                href="https://instagram.com/facundorios._?igshid=ZGUzMzM3NWJiOQ=="
+                href="https://www.instagram.com/facundorios._/?next=%2F"
                 ><img src="../IMG/IG.png" width="100px" alt="" />
               </a>
             </div>
