Se hicieron cambios esteticos

--- a/HTML/contactme.html
+++ b/HTML/contactme.html
@@ -41,13 +41,13 @@
     </header>
     <main>
       <br />
-      <h1>Don't dude to talk to me!</h1>
+      <h1>Do not hesitate to contact me!</h1>
       <br />
       <div class="container-text-center-2">
         <div class="row">
           <div class="col">
             <a
-              href="https://instagram.com/facundorios._?igshid=ZGUzMzM3NWJiOQ=="
+              href="https://www.instagram.com/facundorios._/"
               target="_blank"
               ><img src="../IMG/IG.png" width="100px" alt="" />
             </a>
